--- a/stories/index.html
+++ b/stories/index.html
@@ -2189,6 +2189,12 @@
       <td><a name="pa0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html" target="_blank">ਖਲਾਈ ਪੌਦਿਆਂ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0120</td>
       <td><a href="/stories/pa/0120_ਵਾਲ_slides.html" target="_blank">ਵਾਲ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2207,10 +2213,22 @@
       <td><a name="pa0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0296</td>
+      <td><a href="/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html" target="_blank">ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html" target="_blank">ਮੋਮ ਦੇ ਬੱਚੇ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pa0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/pa/0342_ਸਜ਼ਾ_slides.html" target="_blank">ਸਜ਼ਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2859,7 +2877,7 @@
       <td>0089</td>
       <td><a href="http://my.africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0089">ko</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -3135,7 +3153,7 @@
       <td>0296</td>
       <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0296">ko</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -3213,7 +3231,7 @@
       <td>0342</td>
       <td><a href="http://my.africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0342">ko</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
