--- a/stories/no/0141_hønemor-og-tusenbein.html
+++ b/stories/no/0141_hønemor-og-tusenbein.html
@@ -49,35 +49,35 @@ Winny Asara<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
 
-<p>Hønemor og Tusenbein var venner.  Men de likte alltid å konkurrere.  En dag spilte de fotball for å se hvem som var den beste på banen.</p>
+<p>Hønemor og Tusenbein var venner. Men de likte alltid å konkurrere. Én dag spilte de fotball for å se hvem som var den beste på banen.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
 
-<p>De dro til fotballbanen og startet kampen.  Hønemor var rask men Tusenbein var raskere.  Hønemor sparket langt men Tusenbein sparket lengre.  Hønemor ble surere og surere.</p>
+<p>De dro til fotballbanen og startet kampen. Hønemor var rask, men Tusenbein var raskere. Hønemor sparket langt, men Tusenbein sparket lengre. Hønemor ble surere og surere.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
 
-<p>Så lagde de en straffekonkurranse.  Først var Tusenbein keeper.  Hønemor skårte bare ett mål.  Så var det Hønemors tur til å forsvare målet.</p>
+<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>Tusenbein sparket  ballen og skårte.  Tusenbein driblet ballen og skårte.  Tusenbein headet ballen og skårte.  Fem mål skårte Tusenbein.</p>
+<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
 
-<p>Hønemor ble sint fordi  hun tapte.  Hun var en veldig dårlig taper.  Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
+<p>Hønemor ble sint fordi hun tapte. Hun var en veldig dårlig taper. Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Winny Asara<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
 
-<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein.  “Har du sett barnet mitt?” spurte Mor Tusenbein.  Hønemor sa ikke noe.  Mor Tusenbein ble urolig.</p>
+<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein. “Har du sett barnet mitt?” spurte Mor Tusenbein. Hønemor sa ikke noe. Mor Tusenbein ble urolig.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>Så hørte Mor Tusenbein en svak stemme: “Mamma, hjelp meg!”. Mor Tusenbein så seg rundt og lyttet spent.<br />
+<p>Så hørte Mor Tusenbein en svak stemme: “Mamma, hjelp meg!”. Mor Tusenbein så seg rundt og lyttet spent. 
 Lyden kom fra inni høna.</p>
 
 <div class="pagenum">8</div>
@@ -106,28 +106,28 @@ Lyden kom fra inni høna.</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
 
-<p>Mor Tusenbein ropte: “Bruk det trikset du kan, barnet mitt!”.  Tusenbein kan lage dårlig lukt selv og en sånn fæl smak.  Hønemor kjente hun ble dårlig.</p>
+<p>Mor Tusenbein ropte: “Bruk det trikset du kan, barnet mitt!”. Tusenbein kan lage en dårlig lukt og en sånn fæl smak. Hønemor kjente hun ble dårlig.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
 
-<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun.  Og kastet opp.  Tusenbeinet var ufyselig.</p>
+<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun. Og kastet opp. Tusenbeinet var ufyselig.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
 
-<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein  og barnet hennes klatret opp i et tre for å gjemme seg.</p>
+<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein og barnet hennes klatret opp i et tre for å gjemme seg.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
 
-<p>Siden den tid har høner og tusenbein vært fiender.</p>
+<p>Siden den gang har høner og tusenbein vært fiender.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
