--- a/stories/no/0158_høne-og-ørn.html
+++ b/stories/no/0158_høne-og-ørn.html
@@ -56,21 +56,21 @@ Ann Nduku<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
 
-<p>En gang var det hungersnød i landet. Ørn måtte gå veldig langt for å finne mat. Hun var veldig trett da hun kom tilbake. “Det må være en lettere måte å reise på “, sa Ørn.</p>
+<p>En gang var det hungersnød i landet. Ørn måtte gå veldig langt for å finne mat. Hun var veldig trøtt da hun kom tilbake. “Det må være en lettere måte å reise på”, sa Ørn.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>Etter en god natts søvn fikk Høne en lys ide. Hun begynte å samle sammen fjær som hadde falt fra alle vennene deres blant fuglene. “La oss sy dem fast utenpå fjærene våre”, sa hun. Kanskje det blir lettere å reise da.</p>
+<p>Etter en god natts søvn fikk Høne en lys idé. Hun begynte å samle sammen fjær som hadde falt fra alle vennene deres blant fuglene. “La oss sy dem fast utenpå fjærene våre”, sa hun. Kanskje det blir lettere å reise da.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
 
-<p>Det var bare Ørn i landsbyen som hadde en synål, så hun begynte først å sy. Hun laget seg et par nydelige vinger og fløy høyt i sky. Høne lånte nålen men ble fort trett av å sy. Hun la nålen i skapet og gikk for å lage mat til barna sine.</p>
+<p>Det var bare Ørn i landsbyen som hadde en synål, så hun begynte først å sy. Hun laget seg et par nydelige vinger og fløy høyt i sky. Høne lånte nålen men ble fort trøtt av å sy. Hun la nålen i skapet og gikk for å lage mat til barna sine.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>Og som Ørns vinge kaster sin skygge på bakken varsler Høne kyllingene sine: “Kom dere vekk fra den åpne plassen”. Og de svarer: “Vi er ikke dumme. Vi skal løpe.”</p>
+<p>Og når Ørns vinge kaster sin skygge på bakken varsler Høne kyllingene sine: “Kom dere vekk fra den åpne plassen”. Og de svarer: “Vi er ikke dumme. Vi skal løpe.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
