--- a/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
+++ b/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hønemor og Tusenbein - Global African Storybook</title>
+  <title>ਖਲਾਈ ਪੌਦਿਆਂ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="hønemor-og-tusenbein" class="slide level1">
-<h1>Hønemor og Tusenbein</h1>
+<section id="ਖਲਈ-ਪਦਆ-ਨਲ-ਗਲਬਤ-ਕਰਦ-ਹ" class="slide level1">
+<h1>ਖਲਾਈ ਪੌਦਿਆਂ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p>Hønemor og Tusenbein var venner. Men de likte alltid å konkurrere. Én dag spilte de fotball for å se hvem som var den beste på banen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p>ਇਹ ਖਲਾਈ ਹੈ। ਉਹ ਸੱਤ ਸਾਲ ਦੀ ਹੈ। ਉਸਦੀ ਭਾਸ਼ਾ, ਲੂਬੂਕੂਸੂ ਵਿੱਚ, ਉਸਦੇ ਨਾਮ ਦਾ ਮਤਲਬ 'ਚੰਗਾ' ਹੈ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>De dro til fotballbanen og startet kampen. Hønemor var rask, men Tusenbein var raskere. Hønemor sparket langt, men Tusenbein sparket lengre. Hønemor ble surere og surere.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p>ਖਲਾਈ ਜਾਗ ਕੇ ਸੰਤਰੇ ਦੇ ਰੁੱਖ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਸੰਤਰੇ ਦੇ ਰੁੱਖ, ਕਿਰਪਾ ਕਰਕੇ ਵੱਡੇ ਹੋ ਕੇ ਸਾਨੂੰ ਬਹੁਤ ਸਾਰੇ ਪੱਕੇ ਸੰਤਰੇ ਦਿਓ।&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p>ਖਲਾਈ ਸਕੂਲ ਨੂੰ ਚੱਲ ਕੇ ਜਾਂਦੀ ਹੈ। ਰਾਹ ਵਿੱਚ, ਉਹ ਘਾਹ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਘਾਹ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਹੋਰ ਹਰਿਆਲੀ ਪਾਉਂ ਅਤੇ ਸੁੱਕ ਨਾ ਜਾਇਓ I&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p>ਖਲਾਈ ਜੰਗਲੀ ਫੁੱਲਾਂ ਕੋਲ ਲੰਘਦੀ ਹੈ। &quot;ਫੁੱਲ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਖਿੜੇ ਰਹੋ ਤਾਂ ਕੇ ਮੈਂ ਤੁਹਾਨੂੰ ਆਪਣੇ ਵਾਲਾਂ ਵਿੱਚ ਸਜਾ ਸਕਾਂ।&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p>Hønemor ble sint fordi hun tapte. Hun var en veldig dårlig taper. Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p>ਸਕੂਲ ਵਿੱਚ, ਖਲਾਈ ਆਂਗਣ ਦੇ ਵਿਚਕਾਰ ਰੁੱਖ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਰੁੱਖ, ਕਿਰਪਾ ਕਰਕੇ ਵੱਡੀਆਂ ਟਾਹਣੀਆਂ ਉਗਾਓ ਤਾਂ ਕੇ ਅਸੀਂ ਤੁਹਾਡੀ ਛਾਂ ਵਿੱਚ ਪੜ੍ਹ ਸਕੀਏ।&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>Hønemor var så sint at hun åpnet nebbet og slukte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p>ਖਲਾਈ ਸਕੂਲ ਦੇ ਆਲੇ ਦੁਆਲੇ ਝਾੜੀਆਂ ਦੀ ਵਾੜ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਕਿਰਪਾ ਕਰਕੇ ਮਜ਼ਬੂਤ ਬਣੋ ਅਤੇ ਬੁਰੇ ਲੋਕਾਂ ਨੂੰ ਅੰਦਰ ਆਉਣ ਤੋਂ ਰੋਕੋ।”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein. &quot;Har du sett barnet mitt?&quot; spurte Mor Tusenbein. Hønemor sa ikke noe. Mor Tusenbein ble urolig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p>ਖਲਾਈ ਸਕੂਲ ਤੋਂ ਵਾਪਸ ਆਕੇ, ਸੰਤਰੇ ਦੇ ਰੁੱਖ ਨੂੰ ਮਿਲਦੀ ਹੈ। &quot;ਕੀ ਤੁਹਾਡੇ ਸੰਤਰੇ ਹੁਣ ਪੱਕੇ ਹਨ?&quot; ਖਲਾਈ ਪੁੱਛਦੀ ਹੈ I</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Så hørte Mor Tusenbein en svak stemme: &quot;Mamma, hjelp meg!&quot;. Mor Tusenbein så seg rundt og lyttet spent. Lyden kom fra inni høna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p>&quot;ਸੰਤਰੇ ਅਜੇ ਵੀ ਹਰੇ ਹਨ,&quot; ਖਲਾਈ ਨੇ ਹਉਕਾ ਲਿਆ। &quot;ਮੈਂ ਤੁਹਾਨੂੰ ਕੱਲ੍ਹ ਨੂੰ ਵੇਖਾਂਗੀ, ਸੰਤਰੇ ਦੇ ਰੁੱਖ,&quot; ਖਲਾਈ ਕਹਿੰਦੀ ਹੈ। &quot;ਸ਼ਾਇਦ ਫਿਰ ਤੁਹਾਡੇ ਕੋਲ ਮੇਰੇ ਲਈ ਪੱਕਾ ਸੰਤਰਾ ਹੋਵੇਗਾ!&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,48 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p>Mor Tusenbein ropte: &quot;Bruk det trikset du kan, barnet mitt!&quot;. Tusenbein kan lage en dårlig lukt og en sånn fæl smak. Hønemor kjente hun ble dårlig.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun. Og kastet opp. Tusenbeinet var ufyselig.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein og barnet hennes klatret opp i et tre for å gjemme seg.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p>Siden den gang har høner og tusenbein vært fiender.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="hønemor-og-tusenbein-1">Hønemor og Tusenbein</h2>
-<strong>Tekst:</strong> Winny Asara<br> <strong>Illustrasjoner:</strong> Winny Asara<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="ਖਲਈ-ਪਦਆ-ਨਲ-ਗਲਬਤ-ਕਰਦ-ਹ-1">ਖਲਾਈ ਪੌਦਿਆਂ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>her</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/khalai-talks-plants'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
