--- a/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html
+++ b/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hønemor og Tusenbein - Global African Storybook</title>
+  <title>ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="hønemor-og-tusenbein" class="slide level1">
-<h1>Hønemor og Tusenbein</h1>
+<section id="ਟਮ-ਕਲ-ਵਚਣ-ਵਲ" class="slide level1">
+<h1>ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p>Hønemor og Tusenbein var venner. Men de likte alltid å konkurrere. Én dag spilte de fotball for å se hvem som var den beste på banen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p>ਟੌਮ ਪੱਕੇ ਕੇਲਿਆਂ ਦੀ ਟੋਕਰੀ ਲਈ ਜਾਂਦਾ ਹੈ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>De dro til fotballbanen og startet kampen. Hønemor var rask, men Tusenbein var raskere. Hønemor sparket langt, men Tusenbein sparket lengre. Hønemor ble surere og surere.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p>ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਲਈ ਬਾਜ਼ਾਰ ਜਾਂਦਾ ਹੈ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p>ਬਾਜ਼ਾਰ ਵਿੱਚ ਲੋਕ ਫਲ ਖਰੀਦ ਰਹੇ ਹਨ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p>ਪਰ ਕੋਈ ਵੀ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਨਹੀਂ ਰਿਹਾ। ਉਹ ਔਰਤਾਂ ਤੋਂ ਫਲ ਖਰੀਦਣਾ ਪਸੰਦ ਕਰਦੇ ਹਨI</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p>Hønemor ble sint fordi hun tapte. Hun var en veldig dårlig taper. Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p>&quot;ਸਾਡੇ ਭਾਈਚਾਰੇ ਵਿੱਚ, ਸਿਰਫ਼ ਔਰਤਾਂ ਫਲ ਵੇਚਦੀਆਂ ਹਨ,&quot; ਲੋਕ ਕਹਿੰਦੇ ਹਨ I &quot;ਇਹ ਕਿਸ ਕਿਸਮ ਦਾ ਆਦਮੀ ਹੈ?&quot; ਲੋਕ ਪੁੱਛਦੇ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>Hønemor var så sint at hun åpnet nebbet og slukte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p>ਪਰ ਟੌਮ ਹਾਰ ਨਹੀਂ ਮੰਨਦਾ। ਉਸ ਨੇ ਪੁਕਾਰਿਆ, &quot;ਮੇਰੇ ਕੇਲੇ ਖਰੀਦੋ! ਮੇਰੇ ਮਿੱਠੇ ਪੱਕੇ ਕੇਲੇ ਖਰੀਦੋ!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein. &quot;Har du sett barnet mitt?&quot; spurte Mor Tusenbein. Hønemor sa ikke noe. Mor Tusenbein ble urolig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p>ਇੱਕ ਔਰਤ ਟੋਕਰੀ ਵਿਚੋਂ ਕੁੱਝ ਕੇਲੇ ਚੁੱਕਦੀ ਹੈ। ਉਹ ਕੇਲਿਆਂ ਨੂੰ ਧਿਆਨ ਨਾਲ ਵੇਖਦੀ ਹੈ I</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Så hørte Mor Tusenbein en svak stemme: &quot;Mamma, hjelp meg!&quot;. Mor Tusenbein så seg rundt og lyttet spent. Lyden kom fra inni høna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p>ਉਹ ਔਰਤ ਕੇਲੇ ਖਰੀਦ ਦੀ ਹੈ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p>Mor Tusenbein ropte: &quot;Bruk det trikset du kan, barnet mitt!&quot;. Tusenbein kan lage en dårlig lukt og en sånn fæl smak. Hønemor kjente hun ble dårlig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p>ਹੋਰ ਲੋਕ ਸਟਾਲ ਤੇ ਆਉਂਦੇ ਹਨ। ਉਹ ਟੌਮ ਦੇ ਕੇਲੇ ਖਰੀਦ ਕੇ ਖਾਂਦੇ ਹਨ।</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun. Og kastet opp. Tusenbeinet var ufyselig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p>ਜਲਦੀ ਹੀ, ਟੋਕਰੀ ਖਾਲੀ ਹੋ ਜਾਂਦੀ ਹੈ। ਟੌਮ ਆਪਣੀ ਕਮਾਈ ਦੇ ਪੈਸੇ ਦੀ ਗਿਣਤੀ ਕਰਦਾ ਹੈ।</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein og barnet hennes klatret opp i et tre for å gjemme seg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p>ਫਿਰ ਟੌਮ ਸਾਬਣ, ਖੰਡ ਅਤੇ ਰੋਟੀ ਖਰੀਦ ਦਾ ਹੈ। ਉਹ ਇਹ ਸਮਾਨ ਆਪਣੀ ਟੋਕਰੀ ਵਿੱਚ ਰੱਖਦਾ ਹੈ।</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p>Siden den gang har høner og tusenbein vært fiender.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p>ਟੌਮ ਟੋਕਰੀ ਆਪਣੇ ਸਿਰ ਤੇ ਟਕਾਉਂਦਾ ਹੈ ਅਤੇ ਘਰ ਚਲਾ ਜਾਂਦਾ ਹੈ।</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,12 +204,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hønemor-og-tusenbein-1">Hønemor og Tusenbein</h2>
-<strong>Tekst:</strong> Winny Asara<br> <strong>Illustrasjoner:</strong> Winny Asara<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="ਟਮ-ਕਲ-ਵਚਣ-ਵਲ-1">ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</h2>
+<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>her</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/tom-banana-seller'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
