--- a/stories/pa/0342_ਸਜ਼ਾ_slides.html
+++ b/stories/pa/0342_ਸਜ਼ਾ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hønemor og Tusenbein - Global African Storybook</title>
+  <title>ਸਜ਼ਾ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="hønemor-og-tusenbein" class="slide level1">
-<h1>Hønemor og Tusenbein</h1>
+<section id="ਸਜ" class="slide level1">
+<h1>ਸਜ਼ਾ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p>Hønemor og Tusenbein var venner. Men de likte alltid å konkurrere. Én dag spilte de fotball for å se hvem som var den beste på banen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p>ਇੱਕ ਦਿਨ ਮਾਂ ਬਹੁਤ ਸਾਰੇ ਫਲ ਲੈ ਕੇ ਆਈ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>De dro til fotballbanen og startet kampen. Hønemor var rask, men Tusenbein var raskere. Hønemor sparket langt, men Tusenbein sparket lengre. Hønemor ble surere og surere.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p>&quot;ਅਸੀਂ ਕਦੋਂ ਕੁੱਝ ਫਲ ਲੈ ਸਕਦੇ ਹਾਂ?&quot; ਅਸੀਂ ਪੁੱਛਿਆ। &quot;ਆਪਾਂ ਅੱਜ ਰਾਤ ਨੂੰ ਫਲ ਖਾਵਾਂਗੇ,&quot; ਮਾਂ ਨੇ ਕਿਹਾ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p>ਮੇਰਾ ਭਰਾ ਰਹੀਮ ਲਾਲਚੀ ਹੈI ਉਸ ਨੇ ਸਾਰੇ ਫਲਾਂ ਦਾ ਸੁਆਦ ਚੱਖਿਆ। ਉਸ ਨੇ ਬਹੁਤ ਸਾਰਾ ਖਾ ਲਿਆ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p>&quot;ਦੇਖੋ ਰਹੀਮ ਨੇ ਕੀ ਕੀਤਾ!&quot; ਮੇਰਾ ਛੋਟਾ ਭਰਾ ਚਿਲਾਇਆ। &quot;ਰਹੀਮ ਨਟਖਟ ਅਤੇ ਸੁਆਰਥੀ ਹੈ,&quot; ਮੈਂ ਆਖਿਆ I</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p>Hønemor ble sint fordi hun tapte. Hun var en veldig dårlig taper. Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p>ਮਾਂ ਰਹੀਮ ਦੇ ਨਾਲ ਗੁੱਸੇ ਹੈ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>Hønemor var så sint at hun åpnet nebbet og slukte Tusenbein.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p>ਅਸੀਂ ਵੀ ਰਹੀਮ ਦੇ ਨਾਲ ਗੁੱਸੇ ਹਾਂ। ਪਰ ਰਹੀਮ ਨੂੰ ਕੋਈ ਅਫ਼ਸੋਸ ਨਹੀਂ ਹੈ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein. &quot;Har du sett barnet mitt?&quot; spurte Mor Tusenbein. Hønemor sa ikke noe. Mor Tusenbein ble urolig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p>&quot;ਕੀ ਤੁਸੀਂ ਰਹੀਮ ਨੂੰ ਸਜ਼ਾ ਨਹੀਂ ਦੇਵੋਗੇ?&quot; ਛੋਟੇ ਭਰਾ ਨੇ ਪੁੱਛਿਆ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p>Så hørte Mor Tusenbein en svak stemme: &quot;Mamma, hjelp meg!&quot;. Mor Tusenbein så seg rundt og lyttet spent. Lyden kom fra inni høna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p>&quot;ਰਹੀਮ, ਛੇਤੀ ਹੀ ਤੁਹਾਨੂੰ ਅਫ਼ਸੋਸ ਹੋਵੇਗਾ,&quot; ਮਾਂ ਨੇ ਚੇਤਾਵਨੀ ਦਿੱਤੀ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p>Mor Tusenbein ropte: &quot;Bruk det trikset du kan, barnet mitt!&quot;. Tusenbein kan lage en dårlig lukt og en sånn fæl smak. Hønemor kjente hun ble dårlig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p>ਰਹੀਮ ਬਿਮਾਰ ਮਹਿਸੂਸ ਕਰਦਾ ਹੈ।</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun. Og kastet opp. Tusenbeinet var ufyselig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p>&quot;ਮੇਰਾ ਪੇਟ ਦੁੱਖ ਰਿਹਾ ਹੈ,&quot; ਰਹੀਮ ਨੇ ਹੌਲੀ-ਹੌਲੀ ਕਿਹਾ।</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein og barnet hennes klatret opp i et tre for å gjemme seg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p>ਮਾਂ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਇਸ ਤਰ੍ਹਾਂ ਹੋਵੇਗਾ। ਫਲ ਰਹੀਮ ਨੂੰ ਸਜ਼ਾ ਦੇ ਰਿਹਾ ਹੈ!</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p>Siden den gang har høner og tusenbein vært fiender.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p>ਬਾਅਦ ਵਿੱਚ, ਰਹੀਮ ਨੇ ਮੁਆਫ਼ੀ ਮੰਗੀ। &quot;ਮੈਂ ਮੁੜ ਕੇ ਕਦੇ ਵੀ ਲਾਲਚੀ ਨਹੀਂ ਹੋਵਾਂਗਾ,&quot; ਉਸ ਨੇ ਵਚਨ ਦਿੱਤਾ। ਅਤੇ ਅਸੀਂ ਉਸ ਤੇ ਵਿਸ਼ਵਾਸ ਕੀਤਾ।</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,12 +204,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hønemor-og-tusenbein-1">Hønemor og Tusenbein</h2>
-<strong>Tekst:</strong> Winny Asara<br> <strong>Illustrasjoner:</strong> Winny Asara<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="ਸਜ-1">ਸਜ਼ਾ</h2>
+<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>her</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/punishment'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
