--- a/stories/no/0006_anansi-og-visdommen.html
+++ b/stories/no/0006_anansi-og-visdommen.html
@@ -56,28 +56,28 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>En dag bestemte Nyame seg til å gi krukka med visdom til Anansi. Og hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
+<p>En dag bestemte Nyame seg for å gi krukka med visdom til Anansi. Og hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>Anansi var grådig og tenkte: “Jeg gjemmer krukka i toppen av et høyt tre. Så jeg kan ha den helt for meg selv!” Han flettet et langt tau, bandt det rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var tungt å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
+<p>Anansi var grådig og tenkte: “Jeg gjemmer krukka i toppen av et høyt tre. Så jeg kan ha den helt for meg selv!” Han flettet et langt tau, bandt det rundt leirkrukka og knyttet det om livet. Og begynte å klatre. Men det var tungt å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>Den lille gutten til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen istedet? “,sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
+<p>Den lille gutten til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?” sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: “Det var jo jeg som skulle ha all denne visdommen men nå var sønnen min lurere enn meg!” Anansi ble så sinna at han kastet krukka ned fra treet.</p>
+<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: “Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!” Anansi ble så sinna at han kastet krukka ned fra treet.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
