--- a/stories/no/0006_anansi-og-visdommen_slides.html
+++ b/stories/no/0006_anansi-og-visdommen_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>En dag bestemte Nyame seg til å gi krukka med visdom til Anansi. Og hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
+<p>En dag bestemte Nyame seg for å gi krukka med visdom til Anansi. Og hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Anansi var grådig og tenkte: &quot;Jeg gjemmer krukka i toppen av et høyt tre. Så jeg kan ha den helt for meg selv!&quot; Han flettet et langt tau, bandt det rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var tungt å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
+<p>Anansi var grådig og tenkte: &quot;Jeg gjemmer krukka i toppen av et høyt tre. Så jeg kan ha den helt for meg selv!&quot; Han flettet et langt tau, bandt det rundt leirkrukka og knyttet det om livet. Og begynte å klatre. Men det var tungt å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>Den lille gutten til Anansi hadde stått og sett på ved foten av treet. &quot;Hadde det ikke vært lettere å klatre med krukka på ryggen istedet? &quot;,sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
+<p>Den lille gutten til Anansi hadde stått og sett på ved foten av treet. &quot;Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?&quot; sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: &quot;Det var jo jeg som skulle ha all denne visdommen men nå var sønnen min lurere enn meg!&quot; Anansi ble så sinna at han kastet krukka ned fra treet.</p>
+<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: &quot;Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!&quot; Anansi ble så sinna at han kastet krukka ned fra treet.</p>
 <center>
 <strong>5</strong>
 </center>
