--- a/stories/no/0087_jeg-liker-å-lese.html
+++ b/stories/no/0087_jeg-liker-å-lese.html
@@ -77,7 +77,7 @@ Letta Machoga<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
 
-<p>Moren min og bestemor har ikke tid.</p>
+<p>Mamma og bestemor har ikke tid.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Letta Machoga<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
 
-<p>Far og bestefar har ikke tid.</p>
+<p>Pappa og bestefar har ikke tid.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
