--- a/stories/no/0087_jeg-liker-å-lese_slides.html
+++ b/stories/no/0087_jeg-liker-å-lese_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
-<p>Moren min og bestemor har ikke tid.</p>
+<p>Mamma og bestemor har ikke tid.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
-<p>Far og bestefar har ikke tid.</p>
+<p>Pappa og bestefar har ikke tid.</p>
 <center>
 <strong>7</strong>
 </center>
