--- a/stories/no/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
+++ b/stories/no/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p>I en landsby ved foten av Mount Kenya i Østafrika arbeidet en liten pike med moren sin på åkeren. Wangari het hun.</p>
+<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten pike med moren sin på åkeren. Wangari het hun.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
-<p>Hun likte å lære noe! Wangari lærte mer og mer for hver bok hun leste. Hun ble så flink på skolen at hun ble invitert til å studere i USA. Wangari ble så glad! Hun ville lære mer om verden.</p>
+<p>Hun likte å lære! Wangari lærte mer og mer for hver bok hun leste. Hun ble så flink på skolen at hun ble invitert til å studere i USA. Wangari ble så glad! Hun ville lære mer om verden.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst selv: I leker og spill med brødrene sine i Kenyas vakre skoger.</p>
+<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
-<p>Wangari hadde arbeidet hardt. Det ble kjent av folk over hele verden og de ga henne en berømt pris. Den kalles Nobels fredspris. Hun ble den første kvinnen i Afrika som fikk den.</p>
+<p>Wangari hadde arbeidet hardt. Folk over hele verden la merke til det og de ga henne en berømt pris. Den kalles Nobels fredspris. Hun ble den første afrikanske kvinnen som fikk den.</p>
 <center>
 <strong>11</strong>
 </center>
