--- a/stories/no/0158_høne-og-ørn_slides.html
+++ b/stories/no/0158_høne-og-ørn_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>En gang var det hungersnød i landet. Ørn måtte gå veldig langt for å finne mat. Hun var veldig trett da hun kom tilbake. &quot;Det må være en lettere måte å reise på &quot;, sa Ørn.</p>
+<p>En gang var det hungersnød i landet. Ørn måtte gå veldig langt for å finne mat. Hun var veldig trøtt da hun kom tilbake. &quot;Det må være en lettere måte å reise på&quot;, sa Ørn.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>Etter en god natts søvn fikk Høne en lys ide. Hun begynte å samle sammen fjær som hadde falt fra alle vennene deres blant fuglene. &quot;La oss sy dem fast utenpå fjærene våre&quot;, sa hun. Kanskje det blir lettere å reise da.</p>
+<p>Etter en god natts søvn fikk Høne en lys idé. Hun begynte å samle sammen fjær som hadde falt fra alle vennene deres blant fuglene. &quot;La oss sy dem fast utenpå fjærene våre&quot;, sa hun. Kanskje det blir lettere å reise da.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>Det var bare Ørn i landsbyen som hadde en synål, så hun begynte først å sy. Hun laget seg et par nydelige vinger og fløy høyt i sky. Høne lånte nålen men ble fort trett av å sy. Hun la nålen i skapet og gikk for å lage mat til barna sine.</p>
+<p>Det var bare Ørn i landsbyen som hadde en synål, så hun begynte først å sy. Hun laget seg et par nydelige vinger og fløy høyt i sky. Høne lånte nålen men ble fort trøtt av å sy. Hun la nålen i skapet og gikk for å lage mat til barna sine.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>Og som Ørns vinge kaster sin skygge på bakken varsler Høne kyllingene sine: &quot;Kom dere vekk fra den åpne plassen&quot;. Og de svarer: &quot;Vi er ikke dumme. Vi skal løpe.&quot;</p>
+<p>Og når Ørns vinge kaster sin skygge på bakken varsler Høne kyllingene sine: &quot;Kom dere vekk fra den åpne plassen&quot;. Og de svarer: &quot;Vi er ikke dumme. Vi skal løpe.&quot;</p>
 <center>
 <strong>10</strong>
 </center>
