--- a/stories/index.html
+++ b/stories/index.html
@@ -488,6 +488,12 @@
       <td><a name="zh0010"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/zh/0027_决定_slides.html" target="_blank">决定</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/zh/0030_感情_slides.html" target="_blank">感情</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2775,7 +2781,7 @@
       <td>0027</td>
       <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0027">ko</a>, <a href="#tl0027">tl</a></td>
+      <td><a href="#ko0027">ko</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
