--- a/stories/index.html
+++ b/stories/index.html
@@ -656,6 +656,12 @@
       <td><a name="zh0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/zh/0158_母鸡和老鹰_slides.html" target="_blank">母鸡和老鹰</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0172</td>
       <td><a href="/stories/zh/0172_水果_slides.html" target="_blank">水果</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -720,6 +726,12 @@
       <td><a href="/stories/zh/0231_气象书_slides.html" target="_blank">气象书</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/zh/0234_球星安迪斯瓦_slides.html" target="_blank">球星安迪斯瓦</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -3009,7 +3021,7 @@
       <td>0158</td>
       <td><a href="http://my.africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#tl0158">tl</a></td>
+      <td><a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -3093,7 +3105,7 @@
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ko0234">ko</a>, <a href="#tl0234">tl</a></td>
+      <td><a href="#ko0234">ko</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
