--- a/stories/index.html
+++ b/stories/index.html
@@ -590,6 +590,12 @@
       <td><a name="zh0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/zh/0111_为什么河马没有毛发_slides.html" target="_blank">为什么河马没有毛发</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/zh/0112_我的身体_slides.html" target="_blank">我的身体</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2931,7 +2937,7 @@
       <td>0111</td>
       <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0111">ko</a>, <a href="#tl0111">tl</a></td>
+      <td><a href="#ko0111">ko</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
