--- a/stories/index.html
+++ b/stories/index.html
@@ -1817,6 +1817,12 @@
       <td><a name="no0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/no/0111_hvorfor-flodhester-ikke-har-hår_slides.html" target="_blank">Hvorfor flodhester ikke har hår</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/no/0112_kroppen-min_slides.html" target="_blank">Kroppen min</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2937,7 +2943,7 @@
       <td>0111</td>
       <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0111">ko</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
