--- a/stories/index.html
+++ b/stories/index.html
@@ -1883,6 +1883,12 @@
       <td><a name="no0206"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/no/0210_tingi-og-kuene_slides.html" target="_blank">Tingi og kuene</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0231</td>
       <td><a href="/stories/no/0231_værboka_slides.html" target="_blank">Værboka</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3081,7 +3087,7 @@
       <td>0210</td>
       <td><a href="http://my.africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#tl0210">tl</a></td>
+      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#tl0210">tl</a></td>
     </tr>
     <tr>
       <td>0212</td>
