--- a/stories/index.html
+++ b/stories/index.html
@@ -818,6 +818,12 @@
       <td><a name="zh0313"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0315</td>
+      <td><a href="/stories/zh/0315_萨可满的歌声_slides.html" target="_blank">萨可满的歌声</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0320</td>
       <td><a href="/stories/zh/0320_你在做什么_slides.html" target="_blank">你在做什么？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3231,7 +3237,7 @@
       <td>0315</td>
       <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0315">ko</a>, <a href="#tl0315">tl</a></td>
+      <td><a href="#ko0315">ko</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
